# ia-generativa-cartera

./: .gitignore
api_ruc_python/: .env.example  .gitignore  README.md  project_structure  pyproject.toml
api_ruc_python/app/: app.py  main.py
api_ruc_python/app/api/: router.py
api_ruc_python/app/api/endpoints/: ruc.py
api_ruc_python/app/core/: settings.py
api_ruc_python/app/models/: ruc.py
api_ruc_python/app/services/: llm.py  sunat.py
api_ruc_python/notebooks/: poc-ruc.ipynb
api_ruc_v1/: .env.example  Cargo.toml  README.md  rust.code-profile
api_ruc_v1/src/: main.rs  server.rs
api_ruc_v1/src/api_caller/: mod.rs  open_api_caller.rs  sunat_api_caller.rs
api_ruc_v1/src/controller/: mod.rs  ruc_controller.rs
api_ruc_v1/src/exception/: api_error.rs  api_exception_enum.rs  error_response.rs  error_type.rs  mod.rs
api_ruc_v1/src/modelo/: category.rs  mod.rs  openai.rs  sunat.rs
api_ruc_v1/src/services/: mod.rs  ruc_service.rs
api_ruc_v1/src/util/: constants.rs
app-restaurant/adk-ws-resturant/: .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  run_dev.sh
app-restaurant/adk-ws-resturant/.cursor/prompts/: chatbot.md
app-restaurant/adk-ws-resturant/app/: main.py
app-restaurant/adk-ws-resturant/app/agent/: agent.py  simple_agent.py
app-restaurant/adk-ws-resturant/app/api/v1/: chat.py  health.py  router.py  streaming.py
app-restaurant/adk-ws-resturant/app/core/: adk_runner.py  config.py
app-restaurant/adk-ws-resturant/app/schemas/: chat.py  health.py
app-restaurant/adk-ws-resturant/app/services/: health.py
app-restaurant/adk-ws-resturant/static/js/: app.js
claude-ai/: .gitignore  README.md  pom.xml
google/vertexai/: README.md  main.py  pyproject.toml  rag_codebase.ipynb
langchain-course/: .gitignore  README.md  env.example  pyproject.toml
mcp-kibana-v1/: pom.xml
rag-openai/: .env.example  .gitignore  README.md  main.py  pyproject.toml
rag-openai/.github/prompts/: add_mongodb.prompt.md
rag-openai/rag/: main.py
rag-openai/rag/api/: routes.py
rag-openai/rag/core/: openai_client.py  openapi_config.py
rag-openai/rag/notebook/: file_search.ipynb  rag.ipynb
rag-openai/rag/schemas/: file_search.py
rag-openai/rag/services/: db_utils.py  file_search_service.py
(+302 files in other folders)
