[project]
name = "adk-ws-resturant"
version = "0.1.0"
description = "Restaurant API with FastAPI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk>=1.1.1",
    "pip>=25.1.1",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
]
